build_log.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\GINO_LEE\AndroidStudioProjects\MyCamera\app\src\main\java\com\ubiqconn\mycamera\MainActivity.java:426: error: local variables referenced from a lambda expression must be final or effectively final
                            android.graphics.Bitmap bitmap = targetTexture.getBitmap();
                                                             ^
Note: C:\Users\GINO_LEE\AndroidStudioProjects\MyCamera\app\src\main\java\com\ubiqconn\mycamera\MainActivity.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error
[Incubating] Problems report is available at: file:///C:/Users/GINO_LEE/AndroidStudioProjects/MyCamera/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\GINO_LEE\AndroidStudioProjects\MyCamera\app\src\main\java\com\ubiqconn\mycamera\MainActivity.java:426: error: local variables referenced from a lambda expression must be final or effectively final
                              android.graphics.Bitmap bitmap = targetTexture.getBitmap();
                                                               ^
  Note: C:\Users\GINO_LEE\AndroidStudioProjects\MyCamera\app\src\main\java\com\ubiqconn\mycamera\MainActivity.java uses or overrides a deprecated API.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
17 actionable tasks: 1 executed, 16 up-to-date
